--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "peridot-php/leo": "^1.6",
         "peridot-php/peridot": "^1.19",
         "peridot-php/peridot-watcher-plugin": "^1.3",
-        "psy/psysh": "^0.10.7"
+        "psy/psysh": "^0.10.7",
+        "vlucas/phpdotenv": "^5.3"
     }
 }
